--- a/clarissa.index.html
+++ b/clarissa.index.html
@@ -1,8 +1,13 @@
-<h1>clarissa costa<h1>
-<h1>repositorio clarissa</h1>
-<p>moro em portugal montijo</p>
-<p>tenho um filho de 1 ano e 5 meses</p>
-<h2>adoro andar de bicicleta</h2>
-<h3>abri</h3>
-<p>amanha     
-</p>
+<!DOCTYPE html>
+<Header>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible">
+
+    <h1>Primeira página SEO da Clarissa</h1>
+    <h2>Vamos</h2>
+</Header>
+<body>
+<a href="https://www.apple.com/"></a></a>
+<header>Header</header>
+<nav>NAV</nav>
+</body>
