--- a/Pages/biblioteca2.index.html
+++ b/Pages/biblioteca2.index.html
@@ -21,4 +21,13 @@
 <h1>Livros</h1>
 <p><img src="./../Images/Head Livros Page.png" alt="Capa Livros"></p>
 <h2> Listas de Livros</h2>
-<a href="https://prnt.sc/5nhphtUzm6eG">    
+<a><img src="./../Images/Banner Novidade - Copia (2).png" alt="Novidade"></a>  
+<a><img src="./../Images/Livro 1.png" alt="Harry Potter e a Criança Amaldiçoada"></a>
+<a><img src="./../Images/Livro 2.png" alt="Os Segredos de Dublemdor"></a>
+<a><img src="./../Images/Livro 3.png" alt="Os Crimes de Grindelwald"></a>
+
+<a><img src="./../Images/Livro 4.png" alt="O Livro das Criaturas"></a>
+<a><img src="./../Images/Livro 5.png" alt="Harry Potter e a Pedra Filosofal"></a>
+<a><img src="./../Images/Livro 6.png" alt="Harry Potter e a Câmara Secreta"></a>
+
+<a><img src="./../Images/Livro 7.png" alt="Harry Potter e o Prisioneiro de Azkaban"></a>
