--- a/Pages/biblioteca2.index.html
+++ b/Pages/biblioteca2.index.html
@@ -31,3 +31,15 @@
 <a><img src="./../Images/Livro 6.png" alt="Harry Potter e a Câmara Secreta"></a>
 
 <a><img src="./../Images/Livro 7.png" alt="Harry Potter e o Prisioneiro de Azkaban"></a>
+<a><img src="./../Images/Livro 8.png" alt="Harry Potter e o Cálice de Fogo"></a>
+<a><img src="./../Images/Livro 9.png" alt="Harry Potter e a Ordem da Fenix"></a>
+<a><img src="./../Images/Livro 10.png" alt="Harry Potter e o Enigma do Principe"></a>
+<a><img src="./../Images/Livro 11.png" alt="Harry Potter e as Relíquias da Morte"></a>
+<a><img src="./../Images/Livro 12.png" alt="Hogwarts Library Box"></a>
+<a><img src="./../Images/Livro 13.png" alt="Animais Fantásticos e onde Habitam
+    Quadribol"></a>
+<a><img src="./../Images/Livro 14.png" alt="Os Contos de Beedle"></a>
+<a><img src="./../Images/Livro 15.png" alt="Historias de Hogwarts"></a>
+<a><img src="./../Images/Livro 16.png" alt="Poder Política"></a>
+<a><img src="./../Images/Livro 17.png" alt="Hogwarts Um Guia Imperfeito"></a>C:\Users\user\git\index.html\Pages\biblioteca2.index.html
+</html>
