--- a/Pages/feiticos.index.html
+++ b/Pages/feiticos.index.html
@@ -28,7 +28,7 @@
     <li><h2>Obliviate</h2></li>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aut magni aliquid eius blanditiis ea et fugiat excepturi placeat aliquam, nesciunt molestias voluptatibus ad obcaecati culpa error dolore illo unde.</p>
     <li><h2>Legilimens</h2></li>
-    <p><h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero fugit doloremque inventore eveniet voluptatum nam, exercitationem excepturi similique temporibus, distinctio esse pariatur porro? Id eum, quia earum consequatur laborum quas!</h2></p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero fugit doloremque inventore eveniet voluptatum nam, exercitationem excepturi similique temporibus, distinctio esse pariatur porro? Id eum, quia earum consequatur laborum quas!</p>
     <li>Locomotor</li>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci nostrum ipsam expedita labore debitis et dolor quos qui laudantium inventore maiores consectetur, commodi eaque tempore velit blanditiis hic doloremque ab?</p>
     <li><h2>Portus</h2></li>
